2008-09-09 Sarka Todorova <sarka.todorova@cern.ch>
	* minor updates (use statement, Ded material, Mdt mismatch warning)
	* tagged as MuonTrackingGeometry-00-03-20

2008-08-06 Sarka Todorova <sarka.todorova@cern.ch>
	* default MuonSpectrometerEntrance resized (R=4251,z=6750)
	* tagged as MuonTrackingGeometry-00-03-19

2008-07-22 Sarka Todorova <sarka.todorova@cern.ch>
	* fix Ded material properties
	* tagged as MuonTrackingGeometry-00-03-18

2008-06-17 Sarka Todorova <sarka.todorova@cern.ch>
	* move active material to ExtendedMaterialProperties
	* avoid use of ::globalToLocal to prevent crashes
	* tagged as MuonTrackingGeometry-00-03-16,
	* bugfix (average x0,l0)        -00-03-17

2008-05-26 Sarka Todorova <sarka.todorova@cern.ch>
	* fix building of MDT supports (change in MuonGeoModel)
	* couple of small memory leaks fixed 
	* tagged as MuonTrackingGeometry-00-03-15

2008-05-24 Sarka Todorova <sarka.todorova@cern.ch>
	* fix parallel building of simplified and blended material 
	* tagged as MuonTrackingGeometry-00-03-14

2008-05-22 Sarka Todorova <sarka.todorova@cern.ch>
	* change default inert setup to exact 
          (temporarily to avoid problems with blended material)
	* tagged as MuonTrackingGeometry-00-03-13 

2008-05-21 Sarka Todorova <sarka.todorova@cern.ch>
	* fix simple partition 
	* add color codes for the frame 
	* tagged as MuonTrackingGeometry-00-03-12 

2008-05-15 Sarka Todorova <sarka.todorova@cern.ch>
	* fix TGC station identification
	* tagged as MuonTrackingGeometry-00-03-11 

2008-05-14 Sarka Todorova <sarka.todorova@cern.ch>
	* MIMB: fix memory leak from rails
	* tagged as MuonTrackingGeometry-00-03-10 

2008-05-13 Sarka Todorova <sarka.todorova@cern.ch>
	* MTGB: remove garbage, update gluing
	* tagged as MuonTrackingGeometry-00-03-09 

2008-05-12 Sarka Todorova <sarka.todorova@cern.ch>
	* realistic and blended inert material coded in parallel
	* tagged as MuonTrackingGeometry-00-03-08 

2008-05-11 Sarka Todorova <sarka.todorova@cern.ch>